# machine-learning-technologies

./: .gitignore  LICENSE  README.md  pyproject.toml
lab2/: missings-encoding-scaling.ipynb
lab3/: params-and-cross-val.ipynb
lab4/: notebook.ipynb
lab5/: ensembles.ipynb
lab6/: ensembles-2.ipynb
nirs/: app.py  notebook.ipynb  РТ5-61Б_Бляблин_Егор_НИРС_ТМО.docx
nirs/assets/: X_test.pkl  X_train.pkl  age_scaler.pkl  hours_scaler.pkl  y_test.pkl  y_train.pkl
rk1/: notebook.ipynb
