[project]
name = "tmo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.1.0",
    "catboost>=1.2.10",
    "ipykernel>=7.2.0",
    "kagglehub>=1.0.1",
    "matplotlib>=3.10.9",
    "pandas[pyarrow]>=3.0.2",
    "polars>=1.40.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.58.0",
]

[tool.ty.environment]
root = ["."]
python = ".venv"
